<resources>
    <string name="app_name">GalleryApp</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_account">I already have an account</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_login_or_password">Forgot login or password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_email_required">Email<font color='#E80000'>*</font></string>
    <string name="hint_password_required">Password<font color='#E80000'>*</font></string>
    <string name="hint_password_confirm_required">Confirm password<font color='#E80000'>*</font></string>
    <string name="hint_user_name_required">User Name<font color='#E80000'>*</font></string>
    <string name="hint_user_name">User Name</string>
    <string name="undefined_user">Undefined user</string>
    <string name="hint_birthday_required">Birthday<font color='#E80000'>*</font></string>
    <string name="hint_birthday">Birthday</string>
    <string name="loading">Loading…</string>
    <string name="sorry">Sorry!</string>
    <string name="sorry_something_went_wrong">Sorry! \nSomething went wrong.</string>
    <string name="there_is_no_pictures">There is no pictures.\nPlease come back later.</string>
    <string name="search">Search</string>
    <string name="tab_new">New</string>
    <string name="tab_popular">Popular</string>
    <string name="take_a_photo_from_the_gallery">Photo from \ngallery</string>
    <string name="take_a_photo_from_the_camera">Photo from \ncamera</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="tag">Tag</string>
    <string name="create_tag">Create Tag</string>
    <string name="new_tag">New Tag</string>
    <string name="invalid_tag_name">Invalid Tag name</string>
    <string name="chip_max_count">Tags max count is 6</string>
    <string name="transitions_logo_start">logo_start</string>
    <string name="transitions_logo_destination">logo_destination</string>
    <string name="successful_registration">Successful Registration</string>
    <string name="functionality_under_development">Functionality under development</string>
    <string name="successful_authentication">Successful authentication</string>
    <string name="photo_name">%1$s</string>
    <string name="photo_name_plug">Name</string>
    <string name="photo_username_plug">User Name</string>
    <string name="views_count">%1$s</string>
    <string name="views_count_plug">999+</string>
    <string name="date_created_plug">23.23.2323</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="profile_views_plug"><font color="#000000">Views:</font> 999+</string>
    <string name="profile_views"><font color="#000000">Views:</font> %1$s</string>
    <string name="profile_loaded_plug"><font color="#000000">Loaded:</font> 999+</string>
    <string name="profile_loaded"><font color="#000000">Loaded:</font> %1$s</string>
    <string name="save">Save</string>
    <string name="upload_photo">Upload photo</string>
    <string name="personal_data">Personal data</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="you_can_delete_your_account">You can <font color="#CF497E">delete your account</font></string>
    <string name="sign_out">Sign out</string>
    <string name="authorities">kz.project.gallery.fileprovider</string>
    <string name="temp_images_dir">temp_images</string>
    <string name="temp_image">temp_image.jpg</string>
    <string name="no_permissions">Without permissions application will not work properly</string>
    <string name="empty_photo_name">Photo name can\'t be empty</string>
    <string name="empty_photo_description">Photo description can\'t be empty</string>
    <string name="not_checked_new_or_popular_chip">At least one of the New or Popular must be checked</string>
    <string name="something_went_wrong_pls_try_later">Something went wrong, please check your internet connection or try later</string>
    <string name="successfully_uploaded">Photo successfully uploaded!</string>
    <string name="are_you_sure_to_sign_out">Are you sure you want to sign out?</string>
    <string name="are_you_sure_to_delete_account">Are you sure you want to delete account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="account_successfully_deleted">Your account has been successfully deleted</string>
    <string name="delete_account">Account deleting</string>
</resources>