<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbarCancel"
                layout="@layout/toolbar_cancel_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbarSave"
                style="@style/MyWidget.ClickableText.Pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </androidx.appcompat.widget.Toolbar>

        <include layout="@layout/gray_divider" />

        <include
            android:id="@+id/profileAvatarImageView"
            style="@style/MyWidget.CircleButtonStroke"
            layout="@layout/user_avatar_image_view" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/MyWidget.TextView.PhotoDetailsAttrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/upload_photo" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/MyWidget.SettingsFragment.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/personal_data" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            style="@style/MyWidget.CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_user_name"
            app:endIconDrawable="@drawable/user_outlined_icon"
            app:endIconMode="custom">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/usernameEditText"
                style="@style/MyWidget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBirthday"
            style="@style/MyWidget.CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_birthday"
            app:endIconDrawable="@drawable/calendar_icon"
            app:endIconMode="custom">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/birthdayEditText"
                style="@style/MyWidget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/MyWidget.SettingsFragment.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/e_mail_address" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/MyWidget.CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_email"
            app:endIconDrawable="@drawable/mail_icon"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutBirthday">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEditText"
                style="@style/MyWidget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/MyWidget.SettingsFragment.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hint_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutOldPassword"
            style="@style/MyWidget.CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/old_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/mainGray">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/oldPasswordEditText"
                style="@style/MyWidget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNewPassword"
            style="@style/MyWidget.CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/mainGray">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/newPasswordEditText"
                style="@style/MyWidget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmNewPassword"
            style="@style/MyWidget.CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/confirm_new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/mainGray">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/confirmNewPasswordEditText"
                style="@style/MyWidget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/deleteAccountTextView"
            style="@style/MyWidget.ClickableText.Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/you_can_delete_your_account" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signOutTextView"
            style="@style/MyWidget.ClickableText.Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mainPink"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_out" />

    </LinearLayout>

</ScrollView>