<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:text="@string/add"
            android:textColor="@color/mainPink"
            android:textSize="15sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mainGray" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="376dp"
        android:background="@color/imageViewBackground"
        android:scaleType="fitCenter"
        tools:src="@drawable/rectangle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mainGray" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        style="@style/MyWidget.CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/name">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/photoNameEditText"
            style="@style/MyWidget.EditText.Outlined.SingleLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        style="@style/MyWidget.CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/description">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/photoDescriptionEditText"
            style="@style/MyWidget.EditText.Outlined.MultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    TODO изучить ChipLayout для тэгов, и доверстать экраны-->

</LinearLayout>