<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbarArrowBack"
                layout="@layout/back_arrow_left" />

            <include
                android:id="@+id/toolbarSettingsButton"
                layout="@layout/settings_button" />

        </androidx.appcompat.widget.Toolbar>

        <include layout="@layout/gray_divider" />

        <include
            android:id="@+id/profileAvatarImageView"
            style="@style/MyWidget.CircleButtonStroke"
            layout="@layout/user_avatar_image_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/photo_username_plug"
            android:textColor="@color/blackText"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registrationDateTextView"
            style="@style/MyWidget.TextView.PhotoDetailsAttrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/date_created_plug" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="27dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/viewsCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_views_plug"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loadedCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/profile_loaded_plug"
                android:textSize="12sp" />

        </LinearLayout>

        <include
            layout="@layout/gray_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp" />


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include
                android:id="@+id/loadingProgressBar"
                layout="@layout/loading_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <include
                android:id="@+id/loadingError"
                layout="@layout/loading_error_with_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>